# autoCDC

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/crawler/: service.py
backend/app/generator/: service.py
backend/app/inference/: service.py
backend/app/schemas/: project.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  index.css
