[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "fastapi>=0.132.0",
    "groq>=1.0.0",
    "markdown>=3.10.2",
    "openai>=2.23.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
    "reportlab>=4.4.10",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
